gio: Add missing (nullable) annotations to GDrive, GMount, GVolume

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://gitlab.gnome.org/GNOME/glib/issues/1354